crates/rusvelte_parser/tests/script/snapshots/snapshot__script__success@script-comment.svelte.snap
---
source: crates/rusvelte_parser/tests/script/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/script/inputs/script-comment.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 9,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "Comment",
        "start": 0,
        "end": 9,
        "data": "  "
      },
      {
        "type": "Text",
        "start": 9,
        "end": 10,
        "raw": "\n",
        "data": "\n"
      }
    ]
  },
  "module": null,
  "instance": {
    "type": "Script",
    "start": 10,
    "end": 27,
    "context": "default",
    "content": {
      "type": "Program",
      "start": 18,
      "end": 18,
      "sourceType": {
        "language": "javascript",
        "moduleKind": "module",
        "variant": "standard"
      },
      "hashbang": null,
      "directives": [],
      "body": []
    },
    "attributes": [],
    "leading_comment": {
      "type": "Comment",
      "start": 0,
      "end": 9,
      "data": "  "
    }
  }
}
